--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -61,7 +61,15 @@
                             <li class="{% block pagamentos %}{% endblock %}">
                                 <a href="/pagamentos"><i class="fa fa-fw fa-paypal"></i> Pagamentos</a>
                             </li>
+
+                            <li class="divider"></li>
+                            <li class="{% block lotes %}{% endblock %}">
+                                <a href="/lotes-admin"><i class="fa fa-fw fa-th"></i> Lotes</a>
+                            </li>
                         </ul>
+                    </li>
+                    <li class="{% block lotes-u %}{% endblock %}">
+                        <a href="/lotes" ><i class="fa fa-th"></i> Lotes</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-archive"></i> Estoque <b class="caret"></b></a>
