--- a/html/templates/produto_cadastro.html
+++ b/html/templates/produto_cadastro.html
@@ -17,7 +17,7 @@
                 <input type="text" class="form-control" id="nome" aria-describedby="nome" placeholder="Digite o nome...">
               </div><br>
               <div class="form-group col-md-12">
-                    <label for="Descrição">Descrição</label>
+                    <label for="Descricao">Descrição</label>
                     <textarea class="form-control" id="Descricao" placeholder="Descrição do produto..."></textarea>
               </div><br>
               <div class="form-group col-md-12">
@@ -25,20 +25,23 @@
                     <input type="number" class="form-control menor" id="Quantidade" placeholder="Digite a Quantidade...">
               </div><br>
               <div class="form-group col-md-12">
-                    <label for="data">Data Envio*</label>
+                    <label for="datepicker">Data Envio*</label>
                     <input type="text" class="form-control menor" id="datepicker" placeholder="Data de envio...">
               </div><br>
-              <div class="form-group group-track">
+              <div class="lista-tracks">
+                  <div class="form-group group-track">
                     <div class="col-md-5">
-                        <label for="Track">Track Number</label>
-                        <input type="number" class="form-control" id="Track" placeholder="Digite o Track Number..." />
+                        <label for="Track-1">Track Number <span class='num-track'>1</span></label>
+                        <input type="number" class="form-control" id="Track-1" placeholder="Digite o Track Number..." />
                     </div>
                     <div class="col-md-7 content-btn-add">
-                        <a class="add-track btn btn-success" data-toggle="tooltip" title="Caso você tenha mais de um track number no mesmo produto adicione os demais clicando aqui" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i></a>
                         <a class="rem-track btn btn-danger" data-toggle="tooltip" title="Remover este Track number" href="#"><i class="fa fa-fw fa-times"></i></a>
                     </div><br>
+                  </div>
               </div>
-              <br><br>
+              <div class="col-md-12"><br>
+                <a class="add-track btn btn-success" data-toggle="tooltip" title="Adicionar" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i>Adicionar Track number</a>
+              </div><br><br>
               <div class="form-group col-md-12"><br><br>
                   <a href="#" type="submit" class="btn btn-primary alterar-status">Salvar</a><br><br>
                   <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> Voltar</a><br><br><br>
