--- a/html/templates/detalhe_lote.html
+++ b/html/templates/detalhe_lote.html
@@ -29,7 +29,7 @@
               </div>
           </div>
           <div class="row">
-              <br><h3><i class="fa fa-list-ol"></i> Lista dos produtos cadastrados</h3><br><br>
+              <br><h3><i class="fa fa-list-ol"></i> Lista dos produtos do lote</h3><br><br>
           </div>
           <div class="row lista itens">
               <div class="col-md-4 item">
