--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -12,17 +12,17 @@
     <title>Vendedor Online Internacional - Login</title>
 
     <!-- Custom Fonts -->
-    <link href="/html/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="/html/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top" class="login">
     <div id="login-box">
-            <img src="/html/static/img/logosite.png" />
+            <img src="/static/img/logosite.png" />
             <p>Digite abaixo seus dados de acesso</p>
             <form action="#" id="form-login">
                 <input type="text" name="login" id="login" placeholder="Login..." /><br />
@@ -31,7 +31,7 @@
             </form>
             <div class="infos">
                 <a href="#">Esqueci Minha Senha</a>
-                <a class="btn-azul" href="cadastro_usuario.html"><i class="fa fa-paper-plane"></i> Quero me Cadastrar</a>
+                <a class="btn-azul" href="/user/registration"><i class="fa fa-paper-plane"></i> Quero me Cadastrar</a>
             </div>
     </div>
 
