--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1102,6 +1102,40 @@ table a{
     font-size: 18px;
 }
 
+form small{
+    font-size: 11px;
+    color: green;
+    top: -22px;
+    position: relative;
+}
+
+.box-resposta{
+    -webkit-box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
+    -moz-box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
+    box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
+    width: 400px;
+    height: 300px;
+    background: #fff;
+    position: fixed;
+    margin: auto;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.box-resposta .titulo{
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.box-resposta p{
+    text-align: center;
+    margin-top: 30px;
+}
+
 @media (max-width: 767px){
     .navbar-brand img:last-child {
         display: none;
