--- a/html/templates/email/forgot-password.html
+++ b/html/templates/email/forgot-password.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 
-<div id="template-email" style="background: #eee; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-    <img src="https://sistema.marviin.com.br/static/marviin/img/logo-pq-marviin-fundo-branco.png" />
-    <div style="background: #fff; padding: 10px 20px 20px 20px;">
-        <p style="color:#858585;font:13px/120% 'Helvetica'">Prezado(a), $arg1.</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">Clique no botão abaixo para cadastrar sua nova senha</p>
+<div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
+    <a href="#"><img width="75" src="http://54.233.138.37/vendedor-internacional/img/logo_sup.png"><img width="200" src="http://54.233.138.37/vendedor-internacional/img/logo_bottom.png"></a>
+    <div style="background: #eee; padding: 10px 20px 20px 20px;">
+        <p style="color:#858585;font:15px/120% 'Helvetica'">Prezado(a), $arg1.</p>
+        <p style="color:#858585;font:15px/120% 'Helvetica'">Clique no botão abaixo para cadastrar sua nova senha</p>
         <p>
-            <a href="$arg2" style="font: 13px/120% 'Helvetica';display: block; background: rgba(75,192,192,1);width: 400px;color: #fff; height: 56px; margin: 0 auto;text-align: center;padding-top: 25px;font-size: 26px;text-decoration: none;font-weight: bold;border-radius: 20px;">TROCAR SENHA</a>
+            <a href="$arg2" style="font: 13px/120% 'Helvetica';display: block; background: #337ab7;width: 310px;color: #fff; height: 37px; margin: 0 auto;text-align: center;padding-top: 9px;font-size: 26px;text-decoration: none;font-weight: bold;border-radius: 10px;">NOVA SENHA</a>
         </p>
     </div>
-    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">Este é um email automático, não responda. Caso tenha alguma dúvida entre em contato conosco pelo email <a href="mailto:contato@marviin.com.br" style="font:13px/120% 'Helvetica'">contato@marviin.com.br</a></small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">Este é um email automático, não responda. Caso tenha alguma dúvida entre em contato conosco pelo email <a href="mailto:contato@marviin.com.br" style="font:13px/120% 'Helvetica'">contato@vendedoronlineinternacional.com.br</a></small>
 </div>
 
 </body>
