--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -12,10 +12,10 @@
     <title>Vendedor Online Internacional - Usuarios</title>
 
     <!-- Bootstrap -->
-    <link href="/html/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fontes -->
-    <link href="/html/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <!-- Estilo -->
-    <link href="/html/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="" class="navbar-brand page-scroll"><img src="/html/static/img/logo_sup.png" /><img src="/html/static/img/logo_bottom.png" /></a>
+                <a href="" class="navbar-brand page-scroll"><img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" /></a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -138,21 +138,21 @@
     <div class="loading" style="display: none;">Loading...</div>
 
     <!-- jQuery -->
-    <script src="/html/static/externo/jquery/jquery.min.js"></script>
+    <script src="/static/externo/jquery/jquery.min.js"></script>
 
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/html/static/externo/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/externo/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="/html/static/js/jqBootstrapValidation.js"></script>
+    <script src="/static/js/jqBootstrapValidation.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="/html/static/js/applications.js"></script>
+    <script src="/static/js/applications.js"></script>
 
 </body>
 
