cadastro de produtos, falta fazer a edição do produto.

--- a/html/templates/email/forgot-password.html
+++ b/html/templates/email/forgot-password.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load i18n %}
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
-    <title>Marviin</title>
+    <title>{% trans "Vendedor Online Internacional" %}</title>
 </head>
 <body>
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-    <a href="#"><img width="75" src="http://54.233.138.37/vendedor-internacional/img/logo_sup.png"><img width="200" src="http://54.233.138.37/vendedor-internacional/img/logo_bottom.png"></a>
+    <a href="#"><img width="75" src="{{ protocol}}://{{ domain }}/vendedor-internacional/img/logo_sup.png"><img width="200" src="{{ protocol}}://{{ domain }}/vendedor-internacional/img/logo_bottom.png"></a>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
-        <p style="color:#858585;font:15px/120% 'Helvetica'">Prezado(a), $arg1.</p>
-        <p style="color:#858585;font:15px/120% 'Helvetica'">Clique no botão abaixo para cadastrar sua nova senha</p>
+        <p style="color:#858585;font:15px/120% 'Helvetica'">{% trans "Prezado(a)" %} {{ user_name }}</p>
+        <p style="color:#858585;font:15px/120% 'Helvetica'">{% trans "Clique no botão abaixo para cadastrar sua nova senha." %}</p>
         <p>
-            <a href="$arg2" style="font: 13px/120% 'Helvetica';display: block; background: #337ab7;width: 310px;color: #fff; height: 37px; margin: 0 auto;text-align: center;padding-top: 9px;font-size: 26px;text-decoration: none;font-weight: bold;border-radius: 10px;">NOVA SENHA</a>
+            {% url 'user_reset_password' uidb64=uid token=token as my_url %}
+            <a href="{{ protocol}}://{{ domain }}{{ my_url }}" style="font: 13px/120% 'Helvetica';display: block; background: #337ab7;width: 310px;color: #fff; height: 37px; margin: 0 auto;text-align: center;padding-top: 9px;font-size: 26px;text-decoration: none;font-weight: bold;border-radius: 10px;">{% trans "TROCAR SENHA" %}</a>
         </p>
     </div>
-    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">Este é um email automático, não responda. Caso tenha alguma dúvida entre em contato conosco pelo email <a href="mailto:contato@marviin.com.br" style="font:13px/120% 'Helvetica'">contato@vendedoronlineinternacional.com.br</a></small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não tenha feito esta solicitação nos avise através do e-mail contato@aaaa.com." %}</small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Este é um e-mail automático disparado pelo sistema. Favor não respondê-lo, pois esta conta não é monitorada." %}</small>
 </div>
 
 </body>
