--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+{% load i18n %}
+<html lang="{{ LANGUAGE_CODE }}">
 
 <head>
 
@@ -9,7 +10,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vendedor Online Internacional - Login</title>
+    <title>{% trans "Vendedor Online Internacional" %} - {% trans "Login" %}</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -18,23 +22,96 @@
     <!-- Theme CSS -->
     <link href="/static/css/style.css" rel="stylesheet">
 
+    <!-- jQuery -->
+    <script src="/static/externo/jquery/jquery.min.js"></script>
+
+    <script src="/static/jsi18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
+
 </head>
 
 <body id="page-top" class="login">
     <div id="login-box">
             <img src="/static/img/logosite.png" />
-            <p>Digite abaixo seus dados de acesso</p>
-            <form action="#" id="form-login">
-                <input type="text" name="login" id="login" placeholder="Login..." /><br />
-                <input type="password" name="password" id="password" placeholder="Senha..." /><br />
-                <input type="submit" value="ENTRAR" />
+            <p>{% trans "Digite abaixo seus dados de acesso" %}</p>
+            <form action="" method="post" id="form-login">
+              {% csrf_token %}
+                {% if next %}
+                <input type="hidden" name="next" value="{{ next }}">
+                {% endif %}
+                <input type="text" name="login" id="login" placeholder="Login..." />
+                {% for error in form.login.errors %}
+                  <br />
+                  <label id="login-error" class="error" for="login">{{ error|escape }}</label>
+                  <br />
+                {% endfor %}
+                <br />
+                {% trans "Senha" as password %}
+                <input type="password" name="password" id="password" placeholder="{{ password }}..." />
+                {% for error in form.password.errors %}
+                  <br />
+                  <label id="password-error" class="error" for="password">{{ error|escape }}</label>
+                  <br />
+                {% endfor %}
+                <br />
+                {% trans "ENTRAR" as log_in %}
+                <input type="submit" id="send-btn" value="{{ log_in }}" />
             </form>
             <div class="infos">
-                <a href="#">Esqueci Minha Senha</a>
-                <a class="btn-azul" href="/user/registration"><i class="fa fa-paper-plane"></i> Quero me Cadastrar</a>
+                <a href="#" id="forgot-password-btn">{% trans "Esqueci Minha Senha" %}</a>
+                <a class="btn-azul" href="/user/registration"><i class="fa fa-paper-plane"></i> {% trans "Quero me Cadastrar" %}</a>
             </div>
     </div>
 
+     <!-- Modal confirmacao de acao-->
+    <script type="text/javascript">
+    $(function(){
+    {% if success %}
+        {% trans "Sucesso" as modal_title %}
+        $('#confirmacao').modal('show');
+    {% elif status_code and status_code == 400 %}
+        {% trans "Erro" as modal_title %}
+        {% if form and form.non_field_errors %}
+            $('#confirmacao').modal('show');
+        {% endif %}
+    {% endif %}
+    });
+    </script>
+    <div id="confirmacao" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{{ modal_title }}</h4>
+                </div>
+                <div class="modal-body">
+                    {% if success %}
+                        <p>{% trans "As instruções para troca de sua senha foram enviadas para o seu e-mail." %}</p>
+                        <p>{% blocktrans %}Este e-mail é válido por {{ expiry }} dias.{% endblocktrans %}</p>
+                    {% elif status_code and status_code == 400 %}
+                        {% if form and form.non_field_errors %}
+                            {% for error in form.non_field_errors %}
+                            <p>{{ error | safe }}</p>
+                            {% endfor %}
+                        {% else %}
+                            <p>{% trans "Não foi possível enviar o e-mail para troca de sua senha." %}</p>
+                        {% endif %}
+                    {% endif %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Loading basta dar display block-->
+    <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
+    <!-- jQuery validate -->
+    <script type="text/javascript" src="/static/externo/jquery/jquery.validate.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/static/externo/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Theme JavaScript -->
+    <script src="/static/js/applications.js"></script>
 </body>
 
 </html>
