--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "Vendedor Online Internacional - cadastro" %}</title>
+    <title>{% trans "Vendedor Online Internacional" %} - {% trans "Cadastro" %}</title>
 
     <!-- Bootstrap CSS -->
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,6 +23,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <link href="/static/css/style.css" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="/static/externo/jquery/jquery.min.js"></script>
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
@@ -58,78 +61,120 @@
               {% csrf_token %}
               <div class="form-group">
                 <label for="nome">{% trans "Nome" %}*</label>
-                  {% trans "Digite o nome..." as first_name %}
-                <input type="text" class="form-control" id="nome" aria-describedby="nome" name="first_name" placeholder="{{ first_name }}" value="{% if form %}{{ form.first_name.value }}{% endif %}">
+                  {% trans "Digite o nome" as first_name %}
+                <input type="text" class="form-control" id="nome" aria-describedby="nome" name="first_name" placeholder="{{ first_name }}..." value="{% if form %}{{ form.first_name.value }}{% endif %}">
+                {% for error in form.first_name.errors %}
+                  <label id="nome-error" class="error" for="nome">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <div class="form-group">
-                <label for="nome">{% trans "Sobrenome" %}*</label>
-                  {% trans "Digite o sobrenome..." as last_name %}
-                <input type="text" class="form-control" id="sobrenome" aria-describedby="sobrenome" name="last_name" placeholder="{{ last_name }}" value="{% if form %}{{ form.last_name.value }}{% endif %}">
+                <label for="sobrenome">{% trans "Sobrenome" %}*</label>
+                  {% trans "Digite o sobrenome" as last_name %}
+                <input type="text" class="form-control" id="sobrenome" aria-describedby="sobrenome" name="last_name" placeholder="{{ last_name }}..." value="{% if form %}{{ form.last_name.value }}{% endif %}">
+                {% for error in form.last_name.errors %}
+                  <label id="sobrenome-error" class="error" for="sobrenome">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <div class="form-group">
                 <label for="email">{% trans "E-mail" %}*</label>
-                  {% trans "Digite o e-mail..." as email %}
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="{{ email }}" value="{% if form %}{{ form.email.value }}{% endif %}">
+                  {% trans "Digite o e-mail" as email %}
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="{{ email }}..." value="{% if form %}{{ form.email.value }}{% endif %}">
+                {% for error in form.email.errors %}
+                  <label id="email-error" class="error" for="email">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <div class="form-group">
                 <label for="cpf">{% trans "CPF" %}*</label>
-                  {% trans "Digite o CPF..." as doc_number %}
-                <input type="number" class="form-control" id="cpf" name="doc_number" placeholder="{{ doc_number }}" value="{% if form %}{{ form.doc_number.value }}{% endif %}">
+                  {% trans "Digite o CPF" as doc_number %}
+                <input type="number" class="form-control" id="cpf" name="doc_number" placeholder="{{ doc_number }}..." value="{% if form %}{{ form.doc_number.value }}{% endif %}">
+                {% for error in form.doc_number.errors %}
+                  <label id="cpf-error" class="error" for="cpf">{{ error|escape }}</label>
+                {% endfor %}
               </div>
                 <div class="form-group">
                 <label for="telefone">{% trans "Telefone" %}</label>
-                  {% trans "Digite o telefone..." as phone %}
-                <input type="number" class="form-control" id="telefone" name="phone" placeholder="{{ phone }}" value="{% if form %}{{ form.phone.value }}{% endif %}">
+                  {% trans "Digite o telefone" as phone %}
+                <input type="number" class="form-control" id="telefone" name="phone" placeholder="{{ phone }}..." value="{% if form %}{{ form.phone.value }}{% endif %}">
+                {% for error in form.phone.errors %}
+                  <label id="telefone-error" class="error" for="telefone">{{ error|escape }}</label>
+                {% endfor %}
               </div>
                 <div class="form-group">
                 <label for="celular">{% trans "Celular" %}*</label>
-                  {% trans "Digite o celular..." as cell_phone %}
-                <input type="number" class="form-control" id="celular" name="cell_phone" placeholder="{{ cell_phone }}" value="{% if form %}{{ form.cell_phone.value }}{% endif %}">
+                  {% trans "Digite o celular" as cell_phone %}
+                <input type="number" class="form-control" id="celular" name="cell_phone" placeholder="{{ cell_phone }}..." value="{% if form %}{{ form.cell_phone.value }}{% endif %}">
+                {% for error in form.cell_phone.errors %}
+                  <label id="celular-error" class="error" for="celular">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <div class="form-group">
                 <label for="endereco">{% trans "Endereço" %}*</label>
-                  {% trans "Digite o endereço..." as address_1 %}
-                <input type="text" class="form-control" id="endereco" aria-describedby="endereco" name="address_1" placeholder="{{ address_1 }}" value="{% if form %}{{ form.address_1.value }}{% endif %}">
+                  {% trans "Digite o endereço" as address_1 %}
+                <input type="text" class="form-control" id="endereco" aria-describedby="endereco" name="address_1" placeholder="{{ address_1 }}..." value="{% if form %}{{ form.address_1.value }}{% endif %}">
+                {% for error in form.address_1.errors %}
+                  <label id="endereco-error" class="error" for="endereco">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <div class="form-group espaco-bottom">
                   <div class="col-md-4">
                      <label for="complemento">{% trans "Complemento" %}</label>
-                      {% trans "Digite o complemento..." as address_2 %}
-                     <input type="text" class="form-control" id="complemento" aria-describedby="complemento" name="address_2" placeholder="{{ address_2 }}" value="{% if form %}{{ form.address_2.value }}{% endif %}">
+                      {% trans "Digite o complemento" as address_2 %}
+                     <input type="text" class="form-control" id="complemento" aria-describedby="complemento" name="address_2" placeholder="{{ address_2 }}..." value="{% if form %}{{ form.address_2.value }}{% endif %}">
+                    {% for error in form.address_2.errors %}
+                      <label id="complemento-error" class="error" for="complemento">{{ error|escape }}</label>
+                    {% endfor %}
                   </div>
                   <div class="col-md-4">
                     <label for="bairro">{% trans "Bairro" %}*</label>
-                      {% trans "Digite o bairro..." as neighborhood %}
-                    <input type="text" class="form-control" id="bairro" aria-describedby="bairro" name="neighborhood" placeholder="{{ neighborhood }}" value="{% if form %}{{ form.neighborhood.value }}{% endif %}">
+                      {% trans "Digite o bairro" as neighborhood %}
+                    <input type="text" class="form-control" id="bairro" aria-describedby="bairro" name="neighborhood" placeholder="{{ neighborhood }}..." value="{% if form %}{{ form.neighborhood.value }}{% endif %}">
+                    {% for error in form.neighborhood.errors %}
+                      <label id="bairro-error" class="error" for="bairro">{{ error|escape }}</label>
+                    {% endfor %}
                   </div>
                   <div class="col-md-4">
                     <label for="cidade">{% trans "Cidade" %}*</label>
-                      {% trans "Digite o cidade..." as city %}
-                    <input type="text" class="form-control" id="cidade" aria-describedby="cidade" name="city" placeholder="{{ city }}" value="{% if form %}{{ form.city.value }}{% endif %}">
+                      {% trans "Digite o cidade" as city %}
+                    <input type="text" class="form-control" id="cidade" aria-describedby="cidade" name="city" placeholder="{{ city }}..." value="{% if form %}{{ form.city.value }}{% endif %}">
+                    {% for error in form.city.errors %}
+                      <label id="cidade-error" class="error" for="cidade">{{ error|escape }}</label>
+                    {% endfor %}
                   </div>
               </div>
               <div class="form-group espaco-bottom">
                   <div class="col-md-6">
                   <label for="estado">{% trans "Estado" %}*</label>
-                      {% trans "Digite o estado..." as state %}
-                    <input type="text" class="form-control" id="estado" aria-describedby="estado" name="state" placeholder="{{ state }}" value="{% if form %}{{ form.state.value }}{% endif %}">
+                      {% trans "Digite o estado" as state %}
+                    <input type="text" class="form-control" id="estado" aria-describedby="estado" name="state" placeholder="{{ state }}..." value="{% if form %}{{ form.state.value }}{% endif %}">
+                    {% for error in form.state.errors %}
+                      <label id="estado-error" class="error" for="estado">{{ error|escape }}</label>
+                    {% endfor %}
                   </div>
                   <div class="col-md-6">
                     <label for="cep">{% trans "CEP" %}*</label>
-                      {% trans "Digite o CEP..." as zipcode %}
-                    <input type="number" class="form-control" id="cep" aria-describedby="cep" name="zipcode" placeholder="{{ zipcode }}" value="{% if form %}{{ form.zipcode.value }}{% endif %}">
+                      {% trans "Digite o CEP" as zipcode %}
+                    <input type="number" class="form-control" id="cep" aria-describedby="cep" name="zipcode" placeholder="{{ zipcode }}..." value="{% if form %}{{ form.zipcode.value }}{% endif %}">
+                    {% for error in form.zipcode.errors %}
+                      <label id="cep-error" class="error" for="cep">{{ error|escape }}</label>
+                    {% endfor %}
                   </div>
               </div>
               <div class="form-group">
                 <label for="senha">{% trans "Senha" %}*</label>
-                  {% trans "Digite sua senha..." as password %}
-                <input type="password" class="form-control menor" id="senha" name="password" placeholder="{{ password }}">
+                  {% trans "Digite sua senha" as password %}
+                <input type="password" class="form-control menor" id="senha" name="password" placeholder="{{ password }}...">
+                {% for error in form.password.errors %}
+                  <label id="senha-error" class="error" for="senha">{{ error|escape }}</label>
+                {% endfor %}
                 <br><small>{% trans "Digite ao menos 1 letra minúscula, 1 letra maiúscula, 1 número e 1 caractere especial" %}</small>
               </div>
               <div class="form-group">
                 <label for="cSenha">{% trans "Confirmar Senha" %}*</label>
-                  {% trans "Confirmar a senha..." as password_confirmation %}
-                <input type="password" class="form-control menor" id="cSenha" name="password_confirmation" placeholder="{{ password_confirmation }}">
+                  {% trans "Confirmar a senha" as password_confirmation %}
+                <input type="password" class="form-control menor" id="cSenha" name="password_confirmation" placeholder="{{ password_confirmation }}...">
+                {% for error in form.password_confirmation.errors %}
+                  <label id="cSenha-error" class="error" for="cSenha">{{ error|escape }}</label>
+                {% endfor %}
               </div>
               <button type="submit" id="send-btn" class="btn btn-primary">{% trans "Enviar" %}</button><br><br>
               <a href="/"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
@@ -147,8 +192,6 @@
         {% trans "Erro" as modal_title %}
         {% if form and form.non_field_errors %}
             $('#confirmacao').modal('show');
-        {% else %}
-            $('#form-add-user').submit();
         {% endif %}
     {% endif %}
     });
@@ -163,11 +206,11 @@
                 <div class="modal-body">
                     {% if success %}
                         <p>{% trans "Informações enviadas com sucesso." %}</p>
-                        <p>{% blocktrans %}Você receberá um e-mail para validar o seu cadastro. Este e-mail é válido por {{ expiry }} dias.{% endblocktrans %}</p>
+                        <p>{% blocktrans %}Enviamos um e-mail para você validar seu cadastro. Este e-mail é válido por {{ expiry }} dias.{% endblocktrans %}</p>
                     {% elif status_code and status_code == 400 %}
                         {% if form and form.non_field_errors %}
                             {% for error in form.non_field_errors %}
-                            <p>{{ error }}</p>
+                            <p>{{ error | safe }}</p>
                             {% endfor %}
                         {% else %}
                             <p>{% trans "Não foi possível efetuar o seu cadastro." %}</p>
@@ -185,9 +228,7 @@
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
 
 
-    <!-- jQuery -->
-    <script src="/static/externo/jquery/jquery.min.js"></script>
-
+    <!-- jQuery validate -->
     <script type="text/javascript" src="/static/externo/jquery/jquery.validate.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
