--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -28,6 +28,8 @@
     <!-- Estilo -->
     <link href="/static/css/style.css" rel="stylesheet">
 
+    {% block specific_styles %}Specific Styles{% endblock %}
+
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
@@ -35,6 +37,8 @@
 
     <!-- jQuery -->
     <script src="/static/externo/jquery/jquery.min.js"></script>
+
+    <script src="/static/js/inlines.js"></script>
 
     <script src="/static/jsi18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
 
