--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -6,10 +6,10 @@
 
     <div class="container-fluid">
       <div class="row">
+        {% if user|has_product_perm:'view_products' %}
         <div class="col-md-1 sidebar">
 
         </div>
-        {% if user|has_product_perm:'view_products' %}
         <div class="col-md-10 main">
           <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Estoque" %}</h1>
           <div class="row">
@@ -40,12 +40,12 @@
                     <div class="form-group col-md-2">
                         {% trans "Status" as status %}
                         <label for="filtro-status">{{ status }}</label>
-                        {% select_status filter_values '1' as in_stock_filter_status %}
-                        {% select_status filter_values '2' as sent_filter_status %}
+                        {% select_status filter_values '1' as sent_filter_status %}
+                        {% select_status filter_values '2' as in_stock_filter_status %}
                         <select class="form-control" id="filtro-status" name="status">
                           <option value="">{{ status }}</option>
-                          <option value="1" {{ in_stock_filter_status }}>{% trans "Em Estoque" %}</option>
-                          <option value="2" {{ sent_filter_status }}>{% trans "Enviado" %}</option>
+                          <option value="1" {{ sent_filter_status }}>{% trans "Enviado" %}</option>
+                          <option value="2" {{ in_stock_filter_status }}>{% trans "Em Estoque" %}</option>
                         </select>
                     </div>
                     <div class="form-group col-md-3">
@@ -108,9 +108,7 @@
 
                       <!-- fim botao -->
                       {% endif %}
-                      {% if product.status %}
-                      <span id="product-status-display-{{ product.id }}">{{ product.get_status_display  }}</span>
-                      {% endif %}
+                      <span id="product-status-display-{{ product.id }}">{% if product.status %}{{ product.get_status_display  }}{% endif %}</span>
                       {% if user|has_product_perm:'change_product_status' %}
                       <!-- somente admin visualiza -->
 
@@ -120,10 +118,10 @@
                         <form action="" method="post" class="form-change-status" id="form-change-status-{{ product.id }}">
                         {% csrf_token %}
                         <input type="hidden" name="product_id" value="{{ product.id }}" class="product-id">
-                        {% check_status product '1' as in_stock_status %}
-                        {% check_status product '2' as sent_status %}
-                        <label><input type="radio" name="product_status" value="1" data-current-status="{{ product.status }}" {{ in_stock_status }} /> {% trans "Em Estoque" %}</label><br>
-                        <label><input type="radio" name="product_status" value="2" data-current-status="{{ product.status }}" {{ sent_status }} /> {% trans "Enviado" %}</label><br>
+                        {% check_status product '1' as sent_status %}
+                        {% check_status product '2' as in_stock_status %}
+                        <label><input type="radio" name="product_status" value="1" data-current-status="{{ product.status }}" {{ sent_status }} /> {% trans "Enviado" %}</label><br>
+                        <label><input type="radio" name="product_status" value="2" data-current-status="{{ product.status }}" {{ in_stock_status }} /> {% trans "Em Estoque" %}</label><br>
                         <a class="btn btn-primary send-btn-async" href="javascript:void(0);"><i class="fa fa-check"></i></a>
                         <a class="btn btn-danger fechar" href="javascript:void(0);"><i class="fa fa-times"></i></a>
                         </form>
@@ -171,9 +169,9 @@
             {% endif %}
             </nav>
         </div>
-        {% endif %}
         <div class="col-md-1 sidebar">
         </div>
+        {% endif %}
       </div>
     </div>
 
