--- a/html/templates/shipment_list.html
+++ b/html/templates/shipment_list.html
@@ -41,8 +41,8 @@
                     </select>
                 </div>
                 <div class="form-group col-md-2">
-                    <label for="datepicker">Data Envio</label>
-                    <input type="text" class="form-control" id="datepicker" placeholder="Data envio...">
+                    <label for="datepicker">Data de Envio</label>
+                    <input type="text" class="form-control" id="datepicker" placeholder="Data de envio...">
                 </div>
                 <div class="form-group col-md-2">
                     <a class="btn btn-primary filtar-btn" id="filtro"><i class="fa fa-fw fa-filter"></i> Filtrar</a>
@@ -64,7 +64,7 @@
                   <!-- fim campo -->
 
 
-                  <th>Data Envio</th>
+                  <th>Data de Envio</th>
                   <th class="center">Quantidade</th>
                   <th class="center">Track Number</th>
                   <th class="center">Status</th>
